examples/fail/semantic/duplicate_impl.bina
// EXPECT_SEMANTIC_ERROR: duplicate impl
struct Point {
    pub x: int32;
}

impl Point {
    fn value(self: Point) -> int32 {
        return self.x;
    }
}

impl Point {
    fn other(self: Point) -> int32 {
        return self.x;
    }
}

fn main() -> int {
    return 0;
}
